# CloudeCodeSourcecode

./: .gitignore  CONTRIBUTING.md  README.md  Skill.md  package-lock.json  package.json  server.json  temizle.js
backend/: TRACING.md  pyproject.toml
backend/agclaw_backend/: http_api.py  tracing.py
docker/: docker-compose.yml  entrypoint.sh
docs/: architecture.md  bridge.md  commands.md  exploration-guide.md  subsystems.md  tools.md
mcp-server/: Dockerfile  README.md  package.json  server.json
mcp-server/api/: index.ts  vercelApp.ts
mcp-server/src/: http.ts  index.ts  server.ts
prompts/: 01-install-bun-and-deps.md  02-runtime-shims.md  03-build-config.md  04-fix-mcp-server.md  05-env-and-auth.md  06-ink-react-terminal-ui.md  07-tool-system.md  09-query-engine.md  11-mcp-integration.md  12-services-layer.md  13-bridge-ide.md  14-dev-runner.md  15-production-bundle.md  16-testing.md
scripts/: build-bundle.ts  build.sh  package-npm.ts  test-auth.ts  test-services.ts
src/: QueryEngine.ts  Tool.ts  commands.ts  cost-tracker.ts  history.ts  interactiveHelpers.tsx  main.tsx  query.ts  setup.ts
src/assistant/: sessionHistory.ts
src/bootstrap/: state.ts
src/bridge/: bridgeApi.ts  bridgeEnabled.ts  bridgeMain.ts  codeSessionApi.ts  createSession.ts  envLessBridgeConfig.ts  inboundAttachments.ts  inboundMessages.ts  remoteBridgeCore.ts  replBridge.ts  sessionRunner.ts  trustedDevice.ts  workSecret.ts
src/cli/: print.ts  update.ts
src/commands/: commit-push-pr.ts  createMovedToPluginCommand.ts  init.ts  insights.ts  install.tsx  (+4 more)
web/: package-lock.json
(+499 files in other folders)
