[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agclaw-backend"
version = "0.1.0"
description = "Clean-room backend contracts and research orchestrator scaffolding for AG-Claw"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "AG Solution" }]
dependencies = []
# Optional: tracing and instrumentation for observability. These are best-effort
# -- the code will run even if these packages are not installed.
dependencies = [
	"opentelemetry-sdk>=1.18.0",
	"opentelemetry-exporter-otlp>=1.18.0",
	"opentelemetry-instrumentation-requests>=1.18.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agclaw_backend*"]
